--- a/club.html
+++ b/club.html
@@ -107,7 +107,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/artificial intelliigence.png" alt="Logo-AI"
+        <img src="./images/artificial intelliigence.png" alt="Logo-AI"
           style="width:50%;">
         <div class="container">
           <h2>A.I. Club</h2>
@@ -120,7 +120,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/images.png" alt="Developers-logo" style="width:50%">
+        <img src="./images/images.png" alt="Developers-logo" style="width:50%">
         <div class="container">
           <h2>Developers Club</h2>
           <p class="title"></p>
@@ -133,7 +133,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/programmer club logo .png" alt="programmer-logo"
+        <img src="./images/programmer club logo .png" alt="programmer-logo"
           style="width:50%">
         <div class="container">
           <h2>Programmers Club</h2>
@@ -149,7 +149,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/robotics club logo.png" alt="robotics-logo"
+        <img src="./images/robotics club logo.png" alt="robotics-logo"
           style="width:50%">
         <div class="container">
           <h2>Embedded Systems and Robotics Club</h2>
@@ -163,7 +163,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/debating club logo.png" alt="debating-logo"
+        <img src="./images/debating club logo.png" alt="debating-logo"
           style="width:50%">
         <div class="container">
           <h2>Debating Club</h2>
@@ -177,7 +177,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="./images/clublogo/arts club.png" alt="Kalakriti-logo" style="width:50%">
+        <img src="./images/arts club.png" alt="Kalakriti-logo" style="width:50%">
         <div class="container">
           <h2>Kalakriti Club</h2>
           <p class="title"></p>
@@ -191,7 +191,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="./images/clublogo/pratibimb logo.png" alt="pratibimb-logo" style="width:50%">
+      <img src="./images/pratibimb logo.png" alt="pratibimb-logo" style="width:50%">
       <div class="container">
         <h2>Pratibimb Club</h2>
         <p class="title"></p>
@@ -205,7 +205,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="./images/clublogo/SARGAM.png" alt="John" style="width:50%">
+      <img src="./images/SARGAM.png" alt="John" style="width:50%">
       <div class="container">
         <h2>Sargam Club</h2>
         <p class="title"></p>
@@ -219,7 +219,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="./images/clublogo/NITA.png" alt="Nita-logo" style="width:50%">
+      <img src="./images/NITA.png" alt="Nita-logo" style="width:50%">
       <div class="container">
         <h2>Nita Club</h2>
         <p class="title"></p>
