--- a/index.html
+++ b/index.html
@@ -230,6 +230,30 @@
     </div>
   </div>
   </div>
+  <footer id="footer">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-lg-2">
+        <p>
+          Made with ❤️ by
+          <a href="https://www.linkedin.com/in/coderaaditya/">Aaditya Vikram</a>
+        </p>
+
+        <div class="text-center text-lg-end">
+          <a href="https://twitter.com/itsavss" target="_blank">
+            <i class="bi bi-twitter"></i>
+          </a>
+
+          <a href="https://github.com/AlreadyTaken9" target="_blank">
+            <i class="bi bi-github"></i>
+          </a>
+
+          <a href="https://linkedin.com/in/coderaaditya" target="_blank">
+            <i class="bi bi-linkedin"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
